--- a/index.css
+++ b/index.css
@@ -125,7 +125,7 @@ nav div ul li a i h4{
         
     }
     nav div ul li a i h4{
-        font-size: 13px;
+        font-size: 20pxpx;
         margin: 0;
 
     }
